--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://Adithya:Kpaa726@cluster0.bgzzc.mongodb.net/
+MONGODB_URI=mongodb+srv://jahnaviyerramsetti829:jahnavi829@cluster0.pyfel.mongodb.net/
